# QCustomWidgets

./: README.md
Doc/Buttons/: HoldButton.md  SlideButton.md
QCustomWidgets/: CMakeLists.txt  MainWindow.cc  QCustomWidgets_en_US.ts
QCustomWidgets/Buttons/: HoldButton.cc  SlideButton.cc  SlideButton.h
